# zen-mcp-server

./: .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  server.py
.claude/: settings.local.json
conf/: custom_models.json
docs/: advanced-usage.md
providers/: openai.py  registry.py
simulator_tests/: test_o3_model_selection.py  test_o_series_model_selection.py
tests/: test_auto_mode.py  test_intelligent_fallback.py  test_openrouter_provider.py  test_per_tool_model_defaults.py  test_providers.py
